# docs-wireframe-demo

./: .gitignore  README.md  http_wireframe_prompt.md  pyproject.toml
.github/actions/wireframe-review/: action.yml  package-lock.json  package.json  tsconfig.json
.github/actions/wireframe-review/src/: analyze.ts  artifacts.ts  comment.ts  compress.ts  diff.ts  discover.ts  index.ts  llm.ts  prompts.ts  suggestions.ts  validate.ts
.github/workflows/: pages.yml
docs/: accessibility.rst  ci-integration.rst  conf.py  configuration.rst  embedding.rst  index.rst  mast-jwst-demo.rst  quickstart.rst  sphinx-directive.rst  standalone.rst  styling.rst
docs/_static/: example-wireframe.html  mast-jwst-wireframe.html
docs_wireframe_demo/: __init__.py  directive.py  validator.py
docs_wireframe_demo/_static/: wireframe-base.html  wireframe-demo.css  wireframe-engine.js  wireframe-loader.js
examples/: build.py  index.html  record.py
examples/demos/: kitchen-sink-full.json  kitchen-sink-short.json  mast-jwst.json
examples/kitchen-sink/: index.html  wireframe.html
examples/wireframes/: mast-jwst.html
src/docs_wireframe_demo/: __init__.py  directive.py  extension.py  renderer.py  sanitizer.py
src/docs_wireframe_demo/static/: wireframe-demo-controller.js  wireframe-demo-controls.css
