[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-wireframe-demo"
version = "0.1.0"
description = "Reusable infrastructure for embedding interactive wireframe demos in Sphinx documentation and standalone HTML pages"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=5.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
]
renderer = [
    "playwright>=1.40",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docs_wireframe_demo"]
